# hs-digits

./: LICENSE  default.nix  digits.cabal
src/Data/: Digits.hs
test/: Tests.hs
