Build-Type: Simple
Name: digits
Category: Data
Version: 0.3.2
Cabal-Version: >= 1.10
Synopsis: Converts integers to lists of digits and back.
Description: Converts integers to lists of digits and back.
License: BSD3
License-File: LICENSE
Copyright: (c) 2009-2016 Henry Bucklow, Charlie Harvey, 2023 Dan Dart
Author: Henry Bucklow, Dan Dart
Maintainer: cabal@dandart.co.uk
Tested-With: GHC==9.2.6

library
  hs-source-dirs:      src
  exposed-modules:     Data.Digits
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite digits-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base
                     , digits
                     , QuickCheck
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/danwdart/hs-digits.git
