build-type:    Simple
name:          digits
category:      Data
version:       0.3.2
cabal-version: >=1.10
synopsis:      Converts integers to lists of digits and back.
description:   Converts integers to lists of digits and back.
license:       BSD3
license-file:  LICENSE
copyright:     (c) 2009-2016 Henry Bucklow, Charlie Harvey, 2023 Dan Dart
author:        Henry Bucklow, Dan Dart
maintainer:    cabal@dandart.co.uk
tested-with:   GHC ==9.2.6

library
  hs-source-dirs:   src
  exposed-modules:  Data.Digits
  build-depends:    base >=4.7 && <5
  default-language: Haskell2010

test-suite digits-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Tests.hs
  build-depends:
      base
    , digits
    , QuickCheck
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/danwdart/hs-digits.git
